grammar.js
    source_file: $ => repeat($._source_element),

    _source_element: $ => choice(
      $.pragma_directive,
      $.import_directive,
      $.contract_declaration,
      $.interface_declaration,
      $.library_declaration,
      $.constant_variable_declaration,
      $.user_defined_value_type,
      $.error_declaration,
      $.event_declaration,
      $.function_definition,
      $.using_directive,
      $.struct_declaration,
      $.enum_declaration,
      // More elements will be added as we implement them
    ),

    // Pragma directives
    string_literal: $ => choice(
      seq('"', repeat(/[^"\\]|\\.|\\\r?\n/), '"'),
      seq("'", repeat(/[^'\\]|\\.|\\\r?\n/), "'")
    ),

    // Contract declarations
    contract_declaration: $ => seq(
      optional('abstract'),
      'contract',
      $.identifier,
      repeat($.inheritance_specifier),
      $.contract_body
    ),

    contract_body: $ => seq(
      '{',
      repeat($._contract_member),
      '}'
    ),

    _contract_member: $ => choice(
      $.state_variable_declaration,
      $.function_definition,
      $.constructor_definition,
      $.receive_definition,
      $.fallback_definition,
      $.modifier_definition,
      $.error_declaration,
      $.event_declaration,
      $.user_defined_value_type,
      $.using_directive,
      $.struct_declaration,
      $.enum_declaration,
      // More contract members will be added later
    ),

    // User-defined types (for inheritance and other uses)  
    call_arguments: $ => seq(
      '(',
      commaSep($._expression),
      ')'
    ),

    // State variables and constants
    type_name: $ => choice(
      $.primitive_type,
      $.user_defined_type,
      $.array_type,
      prec(50, $.mapping_type)
    ),

    primitive_type: $ => choice(
      'bool',
      'string',
      prec(1, seq('address', 'payable')),
      'address',
      'bytes',
      /uint(8|16|24|32|40|48|56|64|72|80|88|96|104|112|120|128|136|144|152|160|168|176|184|192|200|208|216|224|232|240|248|256)?/,
      /int(8|16|24|32|40|48|56|64|72|80|88|96|104|112|120|128|136|144|152|160|168|176|184|192|200|208|216|224|232|240|248|256)?/,
      /bytes(1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31|32)/
    ),

    storage_location: $ => choice(
      'memory',
      'storage',
      'calldata',
      'transient'
    ),

    // Function definitions
    function_definition: $ => seq(
      'function',
      $.identifier,
      $.parameter_list,
      repeat(choice(
        $.visibility,
        $.state_mutability,
        $.virtual_specifier,
        $.override_specifier,
        $.modifier_invocation
      )),
      optional($.return_type_definition),
      choice($.function_body, ';')
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')'
    ),

    parameter: $ => seq(
      $.type_name,
      optional($.storage_location),
      optional($.identifier)
    ),

    return_type_definition: $ => seq(
      'returns',
      $.parameter_list
    ),

    function_body: $ => seq(
      '{',
      repeat($._statement),
      '}'
    ),

    _statement: $ => choice(
      $.expression_statement,
      $.variable_declaration_statement,
      $.if_statement,
      $.for_statement,
      $.while_statement,
      $.do_while_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.emit_statement,
      $.revert_statement,
      $.try_statement,
      $.block_statement,
      $.unchecked_block,
      $.assembly_statement,
      $.placeholder_statement,
    ),

    expression_statement: $ => prec(1, seq($._expression, ';')),

    variable_declaration_statement: $ => prec(2, seq(
      choice(
        seq($.variable_declaration, optional(seq('=', $._expression))),
        seq($.variable_declaration_tuple, '=', $._expression)
      ),
      ';'
    )),


    variable_declaration: $ => seq(
      $.type_name,
      optional($.storage_location),
      $.identifier
    ),

    variable_declaration_tuple: $ => seq(
      '(',
      commaSep(optional(choice($.variable_declaration, $.identifier))),
      ')'
    ),

    block_statement: $ => seq(
      '{',
      repeat($._statement),
      '}'
    ),

    unchecked_block: $ => seq(
      'unchecked',
      $.block_statement
    ),

    if_statement: $ => prec.right(seq(
      'if',
      '(',
      $._expression,
      ')',
      $._statement,
      optional(seq('else', $._statement))
    )),

    for_statement: $ => seq(
      'for',
      '(',
      choice($.variable_declaration_statement, $.expression_statement, ';'),
      choice($.expression_statement, ';'),
      optional($._expression),
      ')',
      $._statement
    ),

    while_statement: $ => seq(
      'while',
      '(',
      $._expression,
      ')',
      $._statement
    ),

    do_while_statement: $ => seq(
      'do',
      $._statement,
      'while',
      '(',
      $._expression,
      ')',
      ';'
    ),

    return_statement: $ => seq(
      'return',
      optional($._expression),
      ';'
    ),

    break_statement: $ => seq('break', ';'),
    continue_statement: $ => seq('continue', ';'),

    emit_statement: $ => seq(
      'emit',
      $.identifier,
      $.call_arguments,
      ';'
    ),

    revert_statement: $ => seq(
      'revert',
      optional($._expression),
      ';'
    ),

    try_statement: $ => seq(
      'try',
      $._expression,
      optional(seq('returns', $.parameter_list)),
      $.block_statement,
      repeat1($.catch_clause)
    ),

    catch_clause: $ => seq(
      'catch',
      optional(seq(optional($.identifier), $.parameter_list)),
      $.block_statement
    ),

    assembly_statement: $ => seq(
      'assembly',
      optional(choice(
        $.string_literal,
        seq('(', $.string_literal, ')')
      )),
      $.yul_block
    ),

    // Yul (inline assembly)
    yul_block: $ => seq(
      '{',
      repeat($._yul_statement),
      '}'
    ),

    _yul_statement: $ => choice(
      $.yul_block,
      $.yul_variable_declaration,
      $.yul_assignment,
      $.yul_function_call,
      $.yul_if_statement,
      $.yul_for_statement,
      $.yul_switch_statement,
      $.yul_function_definition,
      $.yul_label,
      $.yul_break,
      $.yul_continue,
      $.yul_leave,
      $._yul_literal
    ),

    yul_variable_declaration: $ => seq(
      'let',
      $.yul_identifier,
      optional(seq(':=', $._yul_expression))
    ),

    yul_assignment: $ => seq(
      $.yul_identifier,
      ':=',
      $._yul_expression
    ),

    yul_function_call: $ => seq(
      $.yul_identifier,
      '(',
      commaSep($._yul_expression),
      ')'
    ),

    yul_if_statement: $ => seq(
      'if',
      $._yul_expression,
      $.yul_block
    ),

    yul_identifier: $ => token(prec(-1, /[a-zA-Z_$][a-zA-Z0-9_$]*/)),
    _yul_expression: $ => choice(
      $.yul_identifier,
      $.yul_function_call,
      $.yul_member_access,
      $._yul_literal
    ),

    yul_member_access: $ => prec.left(PREC.MEMBER, seq(
      $.yul_identifier,
      '.',
      $.yul_identifier
    )),

    yul_number_literal: $ => /0|([1-9][0-9]*)/,
    _expression: $ => choice(
      $.assignment_expression,
      $.augmented_assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.update_expression,
      $.struct_expression,
      $.struct_literal,
      $.call_expression,
      $.member_expression,
      $.array_access,
      $.slice_access,
      $.new_expression,
      $.payable_expression,
      $.type_expression,
      $.parenthesized_expression,
      $.array_literal,
      $.tuple_literal,
      $.parenthesized_type,
      $._primary_expression
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      $._expression,
      '=',
      $._expression
    )),

    binary_expression: $ => choice(
      ...[
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['<', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['|', PREC.BITWISE_OR],
        ['^', PREC.BITWISE_XOR],
        ['&', PREC.BITWISE_AND],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['+', PREC.ADDITIVE],
        ['-', PREC.ADDITIVE],
        ['*', PREC.MULTIPLICATIVE],
        ['/', PREC.MULTIPLICATIVE],
        ['%', PREC.MULTIPLICATIVE],
        ['**', PREC.EXPONENTIAL],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          $._expression,
          operator,
          $._expression
        ))
      )
    ),

    update_expression: $ => choice(
      prec.left(PREC.POSTFIX, seq($._expression, choice('++', '--'))),
      prec.right(PREC.UNARY, seq(choice('++', '--'), $._expression))
    ),

    call_expression: $ => prec.left(PREC.CALL, seq(
      field("function", $._expression),
      choice(
        seq(field("options", $.call_options), field("arguments", $.call_arguments)),
        field("arguments", $.call_arguments)
      )
    )),

    member_expression: $ => prec.dynamic(1, seq(
      field('object', choice(
        $._expression,
        $.identifier,
      )),
      '.',
      field('property', $.identifier)
    )),

    parenthesized_expression: $ => prec(PREC.CALL + 1, seq(
      '(',
      $._expression,
      ')'
    )),

    boolean_literal: $ => choice('true', 'false'),

    number_literal: $ => seq(
      choice(
        /\d+(_?\d+)*(\.\d+(_?\d+)*)?([eE][+-]?\d+(_?\d+)*)?/,
        /\.\d+(_?\d+)*([eE][+-]?\d+(_?\d+)*)?/
      ),
      optional(choice(
        'wei', 'gwei', 'ether',
        'seconds', 'minutes', 'hours', 'days', 'weeks', 'years'
      ))
    ),


    identifier: $ => /[a-zA-Z_$][a-zA-Z0-9_$]*/,
  }
});

// Helper functions
function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)), optional(','));
}

function dotSep1(rule) {
  return seq(rule, repeat(seq('.', rule)));
}
